--- a/index.html
+++ b/index.html
@@ -3,29 +3,38 @@
 <head>
   <title>Van Delivery Proof</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 16px;
+      background: #f9f9f9;
+    }
+    .box {
+      background: #fff;
+      padding: 16px;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+      margin-bottom: 16px;
     }
     .hidden {
       display: none;
     }
-    .box {
-      border: 1px solid #ccc;
-      padding: 16px;
-      border-radius: 6px;
-    }
     button {
-      padding: 10px 16px;
+      padding: 12px 16px;
       font-size: 16px;
+      width: 100%;
       margin-top: 12px;
+    }
+    button:disabled {
+      background: #ccc;
     }
   </style>
 </head>
+
 <body>
 
-  <!-- SCREEN 1: USER DETAILS -->
+  <!-- SCREEN 1 -->
   <div id="screen1" class="box">
     <h3>Van Delivery – User Verification</h3>
 
@@ -35,36 +44,59 @@
     <button onclick="goToScreen2()">Continue</button>
   </div>
 
-  <!-- SCREEN 2: PHOTO PROOF -->
+  <!-- SCREEN 2 -->
   <div id="screen2" class="box hidden">
     <h3>Van Delivery – Proof Required</h3>
 
     <p>Please capture a live photo of the van.</p>
 
     <input 
-      type="file" 
-      accept="image/*" 
+      type="file"
+      accept="image/*"
       capture="environment"
       id="photoInput"
     >
 
+    <button id="submitBtn" disabled onclick="submitProof()">
+      Submit Proof
+    </button>
+
+    <p id="statusMsg"></p>
   </div>
 
   <script>
-    // Read values from URL
+    // READ USER DETAILS FROM URL
     const params = new URLSearchParams(window.location.search);
     const empName = params.get("emp_name");
     const empId = params.get("emp_id");
 
-    // Show auto-filled data
     document.getElementById("empName").innerText = empName || "Not provided";
     document.getElementById("empId").innerText = empId || "Not provided";
 
+    // SWITCH TO SCREEN 2
     function goToScreen2() {
       document.getElementById("screen1").classList.add("hidden");
       document.getElementById("screen2").classList.remove("hidden");
+    }
+
+    // ENABLE SUBMIT ONLY AFTER PHOTO
+    const photoInput = document.getElementById("photoInput");
+    const submitBtn = document.getElementById("submitBtn");
+
+    photoInput.addEventListener("change", function () {
+      if (photoInput.files.length > 0) {
+        submitBtn.disabled = false;
+      }
+    });
+
+    // SUBMIT ACTION (TEMP CONFIRMATION)
+    function submitProof() {
+      document.getElementById("statusMsg").innerText =
+        "✅ Proof captured successfully. You may close this page.";
     }
   </script>
 
 </body>
 </html>
+
+
