--- a/index.html
+++ b/index.html
@@ -3,169 +3,107 @@
 <head>
   <title>Aachi VanMarket Confirmation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f6fb;
-      padding: 16px;
-    }
-    h2 {
-      text-align: center;
-    }
-    .subtitle {
-      text-align: center;
-      color: #555;
-      margin-bottom: 20px;
-    }
-    .box {
-      background: #fff;
-      padding: 16px;
-      border-radius: 8px;
-      margin-bottom: 15px;
-    }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 10px;
-      font-size: 14px;
-    }
-    input {
-      width: 100%;
-      height: 38px;
-      padding: 6px 10px;
-      margin-top: 4px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-      box-sizing: border-box;
-    }
-    input[type="file"] {
-      height: auto;
-      padding: 6px;
-    }
-    button {
-      width: 100%;
-      padding: 14px;
-      font-size: 16px;
-      margin-top: 20px;
-      background: #1f4fd8;
-      color: white;
-      border: none;
-      border-radius: 8px;
-    }
-    button:disabled {
-      background: #aaa;
-    }
+    body { font-family: Arial; background: #f4f6fb; padding: 16px; }
+    h2 { text-align: center; }
+    .box { background: #fff; padding: 16px; border-radius: 8px; }
+    label { font-weight: bold; margin-top: 10px; display: block; }
+    input { width: 100%; height: 38px; margin-top: 4px; padding: 6px; }
+    button { width: 100%; margin-top: 20px; padding: 14px; background: #1f4fd8; color: #fff; border: none; }
+    button:disabled { background: #aaa; }
   </style>
 </head>
 
 <body>
 
 <h2>Aachi VanMarket Confirmation</h2>
-<p class="subtitle">
-  Provide VanMarket details 3 times (Start, Mid & End of Van Market)
-</p>
 
 <div class="box">
+  <label>Employee ERP ID</label>
+  <input id="empId">
 
-  <label>Enter Employee ERP ID *</label>
-  <input type="text" id="empId" required>
+  <label>Employee Name</label>
+  <input id="empName">
 
-  <label>Employee Name *</label>
-  <input type="text" id="empName" required>
+  <label>Van Number</label>
+  <input id="vanNumber">
 
-  <label>Enter Van Vehicle Number *</label>
-  <input type="text" id="vanNumber" required>
+  <label>Van Type</label>
+  <input id="vanType">
 
-  <label>Enter Van Type *</label>
-  <input type="text" id="vanType" required>
+  <label>Van Photo</label>
+  <input type="file" id="vanPhoto" accept="image/*" capture="environment">
 
-  <label>Upload Van Front Photo *</label>
-  <input 
-    type="file"
-    id="vanPhoto"
-    accept="image/*"
-    capture="environment"
-    required
-  >
+  <label>Stock Value</label>
+  <input id="stockValue">
 
-  <label>Current Stock in Van (Rs.) *</label>
-  <input type="number" id="stockValue" required>
+  <label>Sale Value</label>
+  <input id="saleValue">
 
-  <label>Van Sale Till Now (Rs.) *</label>
-  <input type="number" id="saleValue" required>
+  <label>Distributor Name</label>
+  <input id="distributorName">
 
-  <label>Distributor Name *</label>
-  <input type="text" id="distributorName" required>
-
-  <button id="submitBtn" disabled onclick="submitForm()">
-    Submit Confirmation
-  </button>
-
+  <button id="submitBtn" disabled onclick="submitForm()">Submit Confirmation</button>
 </div>
 
 <script>
-  const photoInput = document.getElementById("vanPhoto");
-  const submitBtn = document.getElementById("submitBtn");
+const submitBtn = document.getElementById("submitBtn");
+const photoInput = document.getElementById("vanPhoto");
 
-  photoInput.addEventListener("change", () => {
-    if (photoInput.files.length > 0) {
-      submitBtn.disabled = false;
-    }
-  });
+photoInput.addEventListener("change", () => {
+  submitBtn.disabled = false;
+});
 
-  function submitForm() {
-    const empId = document.getElementById("empId").value.trim();
-    const empName = document.getElementById("empName").value.trim();
-    const vanNumber = document.getElementById("vanNumber").value.trim();
-    const vanType = document.getElementById("vanType").value.trim();
-    const stockValue = document.getElementById("stockValue").value;
-    const saleValue = document.getElementById("saleValue").value;
-    const distributorName = document.getElementById("distributorName").value.trim();
-    const photoFile = photoInput.files[0];
+function submitForm() {
+  alert("STEP 1: Submit clicked");
 
-    if (!photoFile) {
-      alert("Please capture van photo");
-      return;
-    }
+  if (!navigator.geolocation) {
+    alert("Geolocation not supported");
+    return;
+  }
 
-    navigator.geolocation.getCurrentPosition(position => {
+  navigator.geolocation.getCurrentPosition(
+    position => {
+      alert("STEP 2: Location captured");
+
       const reader = new FileReader();
-      reader.onloadend = function () {
+      reader.onloadend = () => {
+        alert("STEP 3: Photo read");
 
-        fetch("https://script.google.com/macros/s/AKfycbzZCXrm-FvMAdJAUzVZW8K_NBalhD0-Q106jddJPtAjssKFa6QX__IPbkMWA8TRD0joAQ/exec", {
+        fetch("https://script.google.com/macros/s/AKfycbyJXVWW4akGP-q2-2Dnn7Mjn2RiaCcWtgraMg9JQ0TSE1VyGWcO72TozLARykFK_xgPrw/exec", {
           method: "POST",
           body: JSON.stringify({
-            timestamp: new Date().toISOString(),
-            empId,
-            empName,
-            vanNumber,
-            vanType,
-            stockValue,
-            saleValue,
-            distributorName,
+            empId: empId.value,
+            empName: empName.value,
+            vanNumber: vanNumber.value,
+            vanType: vanType.value,
+            stockValue: stockValue.value,
+            saleValue: saleValue.value,
+            distributorName: distributorName.value,
             latitude: position.coords.latitude,
             longitude: position.coords.longitude,
             image: reader.result.split(",")[1]
           })
         })
-        .then(res => res.json())
-        .then(response => {
-          if (response.status === "error") {
-            alert("❌ " + response.message);
-          } else {
-            alert("✅ Data saved successfully");
-            submitBtn.disabled = true;
-          }
+        .then(res => {
+          alert("STEP 4: Server responded");
+          return res.text();
+        })
+        .then(text => {
+          alert("SERVER RESPONSE:\n" + text);
+        })
+        .catch(err => {
+          alert("FETCH ERROR: " + err);
         });
-
       };
-      reader.readAsDataURL(photoFile);
-    }, () => {
-      alert("Location permission is required");
-    });
-  }
+
+      reader.readAsDataURL(vanPhoto.files[0]);
+    },
+    error => {
+      alert("LOCATION ERROR: Please allow location");
+    }
+  );
+}
 </script>
 
 </body>
