Update fetch URL to new Google Apps Script endpoin

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ function submitForm() {
     distributorName: distributorName.value
   };
 
-  fetch("PASTE_NEW_WEB_APP_URL_HERE", {
+  fetch("https://script.google.com/macros/s/AKfycbyI9kXoXSsrMdk1Tmww5DT6_5jTNx_O08qcek35Keuk-jMAcbgFlN-KNrXriMIOGETXsQ/exec", {
     method: "POST",
     headers: {
       "Content-Type": "application/json; charset=utf-8"
